--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.7.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
     "expo": "^40.0.1",
     "install": "^0.13.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-fs": "@2.16.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.1.0",
